--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.4.0",
+    "cors": "^2.8.5",
     "graphql": "^16.0.0",
+    "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
+    "nestjs-pino": "^2.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -37,6 +41,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.176",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
