--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Erick Gato",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -25,15 +25,19 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.4.0",
     "cors": "^2.8.5",
     "graphql": "^16.0.0",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
+    "mysql2": "^2.3.2",
     "nestjs-pino": "^2.2.0",
+    "pino-http": "^5.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -55,7 +59,8 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5"
   },
   "jest": {
