docs(env): adiciona variaveis de ambiente de exemplo

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 COMPOSE_PROJECT_NAME=students_finder
 APP_PORT=8000
+# Typeorm Database Config
+TYPEORM_URL=mysql://root:devisfuture@students_finder_db:3306/students_finder
+TYPEORM_SYNCRONIZE=false
+TYPEORM_MIGRATIONS_RUN=false
+
+# Typeorm Internals
+TYPEORM_ENTITIES=dist/modules/**/*.entity.js
+TYPEORM_MIGRATIONS_DIR=src/database/migrations
+TYPEORM_MIGRATIONS=dist/database/migrations/*.js
