--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "migrate": "npm run typeorm migration:run",
     "migration:create": "npm run typeorm migration:create -- -n ",
     "migration:generate": "npm run typeorm migration:generate -- -n ",
-		"migration:revert": "npm run typeorm migration:revert"
+    "migration:revert": "npm run typeorm migration:revert",
+    "seed": "node dist/seed.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -33,6 +34,8 @@
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.4.0",
     "cors": "^2.8.5",
+    "faker": "^5.5.3",
+    "gerador-validador-cpf": "^5.0.2",
     "graphql": "^16.0.0",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
@@ -49,6 +52,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.0.0",
