feat(graphql): adiciona module graphql

--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.4.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "faker": "^5.5.3",
     "gerador-validador-cpf": "^5.0.2",
-    "graphql": "^16.0.0",
+    "graphql": "^15.0.0",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.2",
