--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     tty: true
     volumes:
     - .:/home/node/app
+    - /home/node/app/node_modules
 
 volumes:
   students_finder_db_data:
